# pa-qa

./: .gitignore  CLAUDE.md  README.md  blog-poster-reference  initial.md
.claude/commands/: generate-test-suite.md
.github/workflows/: update-mdx-docs.yml
PRPs/: PA-QA-COMPLETE-IMPLEMENTATION.md  REACT-MDX-DEMO-IMPLEMENTATION.md
PRPs/templates/: test-suite-generation-prp.md
agents/: README.md
agents/research/: best-practices-agent.md
agents/testing/: e2e-test-agent.md  unit-test-agent.md
docs/: AI_PROMPTS.md  PA-QA-PRP-Requirements.md  faq.md  index.md  multi-agent-implementation-plan.md
docs/best-practices/: multi-agent-workflow.md  testing-patterns.md
docs/framework/: initial.md  pa-qa-framework.md
docs/migration/: jest-to-vitest.md
docs/requirements/: PA-QA-IMPLEMENTATION-REQUIREMENTS.md  REACT-MDX-DEMO-REQUIREMENTS.md
docs/setup/: quickstart-testing.md  typescript-setup.md
docs/setup-guides/: ci-cd-integration.md  docker-testing-setup.md  fastapi-testing-setup.md  react-testing-setup.md  wordpress-testing-setup.md
docs/testing/: deployment-testing.md
docs/troubleshooting/: common-issues.md
examples/: README.md  fastapi-async-test.py  fastapi-pytest.ini  msw-handlers.ts  vitest-react-config.ts  vitest-setup.ts  wordpress-phpunit.xml
examples/pa-qa-showcase/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  check-pages.js  docker-compose.prod.yml  docker-compose.test.yml  next.config.js  package-lock.json  package.json  playwright.config.ts  start.sh  tailwind.config.js  test-navigation.js  test-report.json  test-website.js  tsconfig.json  vitest.config.ts
examples/pa-qa-showcase/.github/workflows/: test.yml
examples/pa-qa-showcase/app/: globals.css  layout.tsx  page.tsx
examples/pa-qa-showcase/app/best-practices/: page.tsx
examples/pa-qa-showcase/app/ci-cd/: page.tsx
examples/pa-qa-showcase/app/examples/: page.tsx
examples/pa-qa-showcase/app/getting-started/: page.tsx
examples/pa-qa-showcase/app/showcase/: page.tsx
examples/pa-qa-showcase/app/templates/: page.tsx
examples/pa-qa-showcase/app/testing-patterns/: page.tsx
examples/pa-qa-showcase/app/utilities/: page.tsx
examples/pa-qa-showcase/components/: navigation.tsx  theme-toggle.tsx
examples/pa-qa-showcase/components/mdx/: CodeDemo.tsx  CoverageReport.tsx  InteractiveSelector.tsx  LiveCodeEditor.tsx  MockServiceConfig.tsx  MultiAgentDemo.tsx  PerformanceChart.tsx  TabbedCodeDemo.tsx  TestExample.tsx  TestRunner.tsx  WorkflowDiagram.tsx  index.ts  placeholder-components.tsx
examples/pa-qa-showcase/components/navigation/: Navbar.tsx
examples/pa-qa-showcase/components/showcase/: FrameworkIntegration.tsx
examples/pa-qa-showcase/content/: best-practices.mdx  ci-cd.mdx  getting-started.mdx  templates.mdx  testing-patterns.mdx  utilities.mdx
examples/pa-qa-showcase/docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  backup.sh  entrypoint.sh  healthcheck.sh  init-test.sql  init.sql  nginx.dev.conf  nginx.prod.conf  redis.conf  redis.prod.conf
examples/pa-qa-showcase/kubernetes/: deployment.yml
examples/pa-qa-showcase/lib/: mock-handlers.ts  test-runner.ts  utils.ts
examples/pa-qa-showcase/scripts/: sync-docs.js
examples/pa-qa-showcase/tests/accessibility/: a11y.spec.ts
examples/pa-qa-showcase/tests/e2e/: showcase.spec.ts
examples/pa-qa-showcase/tests/fixtures/: test-data.ts
examples/pa-qa-showcase/tests/mocks/: browser.ts  handlers.ts  server.ts
examples/pa-qa-showcase/tests/performance/: performance.spec.ts
examples/pa-qa-showcase/tests/setup/: playwright-setup.ts  playwright-teardown.ts  vitest-setup.ts
examples/pa-qa-showcase/tests/unit/: components.test.tsx
examples/pa-qa-showcase/tests/utils/: test-utils.tsx
examples/pa-qa-showcase/tests/visual/: visual.spec.ts
examples/pa-qa-showcase/types/: mdx.d.ts
memory/: multi-agent-workflow.md
project-types/api-services/fastapi/tests/: conftest.py  factories.py  test_auth.py  test_background_tasks.py  test_crud.py  test_dependencies.py  test_validation.py  test_websocket.py
project-types/web-apps/react/: README.md
project-types/web-apps/react/configs/: package.json  vitest.config.ts
project-types/web-apps/react/tests/: setup.ts  test-utils.tsx
project-types/wordpress/plugin/: .wp-env.json  README.md  composer.json  package.json
project-types/wordpress/plugin/configs/: phpunit.xml
project-types/wordpress/plugin/tests/: TestCase.php  bootstrap.php
scripts/: check-deployment-setup.sh  init-pa-qa.sh
shared/allure-config/: README.md  allure-jest.js  allure-phpunit.xml  allure-pytest.ini  allure-vitest.ts  deploy-pages.yml  generate-report.sh  notifications.js  trend-analysis.py  upload-results.sh
shared/ci-cd-templates/github-actions/: README.md  allure-reports.yml  dependency-update.yml  deploy-production.yml  deploy-staging.yml  fastapi-test.yml  performance-test.yml  react-test.yml  security-scan.yml  wordpress-test.yml
shared/docker-templates/testing/: README.md  cleanup.sh  docker-compose.services.yml  docker-compose.test.yml  k8s-test-pod.yml  node-test.Dockerfile  php-test.Dockerfile  python-test.Dockerfile  test-runner.sh
shared/linting-configs/javascript/: .editorconfig  .gitignore  .prettierrc.js  README.md  eslint.config.js  husky-setup.sh  lint-staged.config.js  package.json  tsconfig.json  vscode-settings.json
shared/linting-configs/php/: .php-cs-fixer.php  .pre-commit-config.yaml  Makefile  README.md  composer.json  phpcs.xml  phpmd.xml  phpstan-bootstrap.php  phpstan.neon  phpunit.xml  psalm.xml  rector.php
shared/linting-configs/php/stubs/: common.stub  laravel.stub  wordpress.stub
shared/linting-configs/python/: .pre-commit-config.yaml  Makefile  README.md  github-actions-python-qa.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  setup.cfg  vscode-python.json
shared/testing-utilities/helpers/api/: api-client.ts  error-simulators.ts  graphql-helpers.ts  httpx-helpers.py  msw-helpers.ts  pagination-helpers.ts  rate-limit-testers.ts  response-validators.ts  wp-rest-helpers.php
(+51 files in other folders)
